--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
 <h1>CUTE FROG</h1>
-<img src="JAMAL JACKSON CERTIFICATE.SVG" alt="JAMAL JACKSON">
+<img src="JAMAL JACKSON CERTIFICATE.PNG" alt="JAMAL JACKSON">
 </html>
