--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <html>
- <head>
-  <title>Jamal Jackson website</title>
- </head>
- <body>
-  <h1>CUTE FROG</h1>
-  <img src="JAMAL JACKSON CERTIFICATE.png" alt="JAMAL JACKSON">
-  <p>This was made by Devin Nong in Adobe Illustrator.</p>
-  <h2>Email: soksung22@gmail.com</h2>
- </body>
+  <head>
+    <title>
+    Jamal Jackson website
+    </title>
+  </head>
+
+  <body>
+    <h1>
+    CUTE FROG
+    </h1>
+
+    <img src="JAMAL JACKSON CERTIFICATE.png" alt="JAMAL JACKSON">
+    <p>This was made by Devin Nong in Adobe Illustrator.</p>
+    <h2>Email: soksung22@gmail.com</h2>
+  </body>
 </html>
