--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     </h1>
 
     <img src="JAMAL JACKSON CERTIFICATE.png" alt="JAMAL JACKSON">
-    <p>This was made by Devin Nong in Adobe Illustrator.</p>
-    <h2>Email: soksung22@gmail.com</h2>
+
+    <p>
+    This was made by Devin Nong in Adobe Illustrator.
+    </p>
+
+    <h2>
+    Email: soksung22@gmail.com
+    </h2>
   </body>
 </html>
