--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
     CUTE FROG
     </h1>
 
+    <hr>
+
     <img src="JAMAL JACKSON CERTIFICATE.png" alt="JAMAL JACKSON">
 
-    <p>
+    <p style="color:purple;">
     This was made by Devin Nong in Adobe Illustrator.
     </p>
 
-    <h2>
+    <h2 style="color:green;">
     Email: soksung22@gmail.com
     </h2>
+
+    <a href="https://www.youtube.com/@aseridern123gmailcom" target="_blank">
+    Youtube channel
+    </a>
   </body>
 </html>
