--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <hr>
 
     <img src="JAMAL JACKSON CERTIFICATE.png" alt="JAMAL JACKSON">
-    <img src="JAMAL JACKSON KINGDOM.PNG" alt="MORE JAMAL JACKSON">
+    <img src="JAMAL JACKSON KINGDOM.png" alt="MORE JAMAL JACKSON">
 
     <p style="color:purple;">
     This was made by Devin Nong in Adobe Illustrator.
