--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     Youtube channel
     </a>
     <p style="colour:yellow">jamal jackson yay</p>
+    <a href="gradientui.com">umm ya</a>
   </body>
 </html>
